--- a/amqp/src/main/resources/application.yml
+++ b/amqp/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     username: guest
     password: guest
     virtual-host: /rabbitmq
+    publisher-returns: true
+    publisher-confirm-type: correlated
+    template:
+      mandatory: true
