--- a/data/pom.xml
+++ b/data/pom.xml
@@ -2,20 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>spring-boot</artifactId>
-        <groupId>com.github.codingob</groupId>
-        <version>1.0.0</version>
-    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.github.codingob</groupId>
     <artifactId>data</artifactId>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
+
     <modules>
-        <module>jdbc</module>
-        <module>redis</module>
-        <module>mongo</module>
-        <module>jpa</module>
+        <module>data-jdbc</module>
+        <module>data-jpa</module>
+        <module>data-redis</module>
+        <module>data-mongo</module>
     </modules>
 
     <properties>
