--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,7 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <java.version>1.8</java.version>
     </properties>
 
 </project>
