--- a/web/src/main/resources/config/application-dev.properties
+++ b/web/src/main/resources/config/application-dev.properties
@@ -1,12 +1,18 @@
-# 端口
+# \u7AEF\u53E3
 server.port=8084
-# 路径
+# \u8DEF\u5F84
 server.servlet.context-path=/web
-# 热部署
+# \u70ED\u90E8\u7F72
 spring.devtools.livereload.enabled=true
-# 静态资源路径
+# \u9759\u6001\u8D44\u6E90\u8DEF\u5F84
 spring.web.resources.static-locations=file:${file.location}
-# 静态资源url
+# \u9A8C\u8BC1\u7801
+captcha.width=200
+captcha.height=50
+captcha.format=jpeg
+captcha.length=4
+captcha.number=false
+# \u9759\u6001\u8D44\u6E90url
 file.protocol=http
 file.host=localhost
 file.port=${server.port}
