--- a/web/src/main/resources/config/application.properties
+++ b/web/src/main/resources/config/application.properties
@@ -1,8 +1,8 @@
-# 端口
-server.port=8084
-# 路径
+# \u7AEF\u53E3
+server.port=8081
+# \u8DEF\u5F84
 server.servlet.context-path=/web
-# 项目名
+# \u9879\u76EE\u540D
 spring.application.name=spring-boot-web
-# 配置文件环境
+# \u914D\u7F6E\u6587\u4EF6\u73AF\u5883
 spring.profiles.active=dev
