--- a/mybatis/src/main/resources/config/application-prod.properties
+++ b/mybatis/src/main/resources/config/application-prod.properties
@@ -1,7 +1,7 @@
-# 热重载
+# \u70ED\u91CD\u8F7D
 spring.devtools.livereload.enabled=false
-# 数据源
+# \u6570\u636E\u6E90
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
