--- a/mybatis/src/main/resources/config/application.properties
+++ b/mybatis/src/main/resources/config/application.properties
@@ -1,8 +1,8 @@
-# 项目名
+# \u9879\u76EE\u540D
 spring.application.name=spring-boot-mybatis
-# 配置文件环境
+# \u914D\u7F6E\u6587\u4EF6\u73AF\u5883
 spring.profiles.active=dev
 # mybatis
+mybatis.type-aliases-package=com.demo.mybatis.entity
 mybatis.mapper-locations=classpath*:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
-mybatis.type-aliases-package=com.demo.mybatis.model
