--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>starter</module>
         <module>shiro</module>
         <module>sample</module>
+        <module>jwt</module>
     </modules>
 
     <properties>
