--- a/web/src/main/resources/config/application-dev.properties
+++ b/web/src/main/resources/config/application-dev.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/web
 # \u70ED\u90E8\u7F72
 spring.devtools.livereload.enabled=true
 # \u9759\u6001\u8D44\u6E90\u8DEF\u5F84
-spring.web.resources.static-locations=file:${file.location}
+spring.web.resources.static-locations=file:${file.location},classpath:static/
 # \u9A8C\u8BC1\u7801
 captcha.width=200
 captcha.height=50
