--- a/web/src/main/resources/config/application.properties
+++ b/web/src/main/resources/config/application.properties
@@ -4,5 +4,10 @@ server.port=8081
 server.servlet.context-path=/web
 # \u9879\u76EE\u540D
 spring.application.name=spring-boot-web
+# jackson
+spring.jackson.default-property-inclusion=non_null
 # \u914D\u7F6E\u6587\u4EF6\u73AF\u5883
 spring.profiles.active=dev
+# \u65E5\u5FD7
+logging.file.name=web.log
+logging.level.root=info
