--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>shiro</module>
         <module>sample</module>
         <module>jwt</module>
+        <module>sso</module>
     </modules>
 
     <properties>
