--- a/sso/sso-client/src/main/resources/config/application-dev.properties
+++ b/sso/sso-client/src/main/resources/config/application-dev.properties
@@ -5,7 +5,13 @@ server.servlet.context-path=/sso
 # \u70ED\u90E8\u7F72
 spring.devtools.livereload.enabled=true
 # \u65E5\u5FD7
-logging.file.name=D:/github/java/spring-boot/sso/target/sso-client.log
+logging.file.name=D:/github/java/spring-boot/sso/sso-client/target/sso-client.log
 logging.level.root=info
 # \u9759\u6001\u8D44\u6E90url
 spring.web.resources.static-locations=classpath:static/
+# \u6570\u636E\u6E90
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
