--- a/sso/sso-client/src/main/resources/config/application.properties
+++ b/sso/sso-client/src/main/resources/config/application.properties
@@ -4,3 +4,10 @@ spring.application.name=spring-boot-sso
 spring.jackson.default-property-inclusion=non_null
 # \u914D\u7F6E\u6587\u4EF6\u73AF\u5883
 spring.profiles.active=dev
+# \u62E6\u622A\u5668
+auth-interceptor.pathPatterns=/**
+auth-interceptor.excludePathPatterns=/logon,/login,/captcha
+# mybatis
+mybatis.type-aliases-package=com.demo.sso.entity
+mybatis.mapper-locations=classpath*:mapper/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
