--- a/data/data-jdbc/pom.xml
+++ b/data/data-jdbc/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <groupId>com.github.codingob</groupId>
-    <artifactId>web</artifactId>
+    <artifactId>data-jdbc</artifactId>
     <version>1.0.0</version>
     <name>data-jdbc</name>
     <description>Demo data-jdbc project for Spring Boot</description>
