--- a/web/src/main/resources/config/application-dev.properties
+++ b/web/src/main/resources/config/application-dev.properties
@@ -1,22 +1,9 @@
 # \u7AEF\u53E3
-server.port=8084
+server.port=8080
 # \u8DEF\u5F84
-server.servlet.context-path=/web
-# \u70ED\u90E8\u7F72
-spring.devtools.livereload.enabled=true
+server.servlet.context-path=/api
 # \u65E5\u5FD7
-logging.file.name=D:/github/java/spring-boot/web/target/web.log
+logging.file.name=web.log
 logging.level.root=info
 # \u9759\u6001\u8D44\u6E90url
-file.protocol=http
-file.host=localhost
-file.port=${server.port}
-file.context-path=:${server.servlet.context-path}
-file.location=D:/github/Java/spring-boot/web/src/main/resources/static/
-spring.web.resources.static-locations=file:${file.location},classpath:static/
-# \u9A8C\u8BC1\u7801
-captcha.width=200
-captcha.height=50
-captcha.format=jpeg
-captcha.length=4
-captcha.number=false
+spring.web.resources.static-locations=classpath:static/
