--- a/web/src/main/resources/config/application.properties
+++ b/web/src/main/resources/config/application.properties
@@ -4,3 +4,5 @@ spring.application.name=spring-boot-web
 spring.jackson.default-property-inclusion=non_null
 # \u914D\u7F6E\u6587\u4EF6\u73AF\u5883
 spring.profiles.active=dev
+# \u70ED\u90E8\u7F72
+spring.devtools.livereload.enabled=true
