--- a/template/src/main/resources/config/application.yml
+++ b/template/src/main/resources/config/application.yml
@@ -9,7 +9,7 @@ spring:
     active: default
     include:
       - minio
-      - mybatis
+      - mybatis-plus
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
@@ -21,6 +21,6 @@ spring:
       max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/spring_boot
+    url: jdbc:mysql://192.168.1.163:3306/spring_boot
     username: root
     password: root
