--- a/template/src/main/resources/config/application.yml
+++ b/template/src/main/resources/config/application.yml
@@ -8,8 +8,9 @@ spring:
   profiles:
     active: default
     include:
-      - minio
+      - token
       - mybatis-plus
+      - minio
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
@@ -21,6 +22,6 @@ spring:
       max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://192.168.1.163:3306/spring_boot
+    url: jdbc:mysql://localhost:3306/spring_boot
     username: root
     password: root
