--- a/template/src/main/resources/config/application.yml
+++ b/template/src/main/resources/config/application.yml
@@ -9,10 +9,9 @@ spring:
     active: default
     include:
       - token
-      - mybatis
+      - mybatis-plus
       - minio
   jackson:
-#    property-naming-strategy: SNAKE_CASE
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
     default-property-inclusion: non_null
@@ -23,6 +22,6 @@ spring:
       max-request-size: 10MB
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/warehouse
+    url: jdbc:mysql://server:3306/spring_boot
     username: root
     password: root
