--- a/template/mobile/package.json
+++ b/template/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-web-template",
+  "name": "vue2-mobile-template",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,16 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.6.5",
-    "echarts": "^5.3.2",
-    "element-ui": "^2.15.6",
+    "vant": "^2.12.47",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
+    "@vue/cli-plugin-babel": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-vuex": "~4.5.13",
+    "@vue/cli-service": "~4.5.13",
     "vue-template-compiler": "^2.6.11"
   }
 }
