--- a/data/jdbc/src/main/resources/application.yml
+++ b/data/jdbc/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: spring-boot-data-jdbc
+    name: jdbc
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
