--- a/admin/admin-server/pom.xml
+++ b/admin/admin-server/pom.xml
@@ -13,28 +13,29 @@
     </parent>
 
     <groupId>com.example.codingob</groupId>
-    <artifactId>amqp</artifactId>
+    <artifactId>admin-server</artifactId>
     <version>1.0.0</version>
-    <name>amqp</name>
-    <description>Demo amqp project for Spring Boot</description>
+    <name>admin-server</name>
+    <description>Demo admin-server project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <admin.version>2.4.3</admin.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-server</artifactId>
+            <version>${admin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
