--- a/template/web/package.json
+++ b/template/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-web-template",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "echarts": "^5.3.2",
+    "element-ui": "^2.15.8",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
