--- a/admin/admin-client/pom.xml
+++ b/admin/admin-client/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.5.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
-    <groupId>com.example.codingob</groupId>
+    <groupId>com.github.codingob</groupId>
     <artifactId>admin-client</artifactId>
     <version>1.0.0</version>
     <name>admin-client</name>
