--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -3,20 +3,14 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.example.codingob</groupId>
+    <groupId>com.github.codingob</groupId>
     <artifactId>admin</artifactId>
     <version>1.0.0</version>
     <name>admin</name>
     <packaging>pom</packaging>
-
     <modules>
         <module>admin-server</module>
         <module>admin-client</module>
     </modules>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
 </project>
