--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.example.codingob</groupId>
+    <groupId>com.github.codingob</groupId>
     <artifactId>spring-boot</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
@@ -31,9 +30,5 @@
         <module>minio</module>
         <module>template</module>
     </modules>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
 
 </project>
